--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   <div class="top-strip">
     <!-- 모바일에서 좌측 사이드바 열기 -->
     <button class="burger" id="sidebar-toggle" aria-label="채팅 목록 열기" title="채팅 목록 열기">☰</button>
-    <div class="top-right">박주혁 님</div>
+    <div class="top-right">{{ user.name }} 님</div>
   </div>
 
   <!-- 좌측 고정/슬라이드 메뉴 -->
